[package]
name = "pokiominer"
version = "0.1.0"
edition = "2021"

#RUSTFLAGS="-C target-feature=+crt-static" cargo build --release

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
sysinfo = "0.29"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.2"
ethereum-types = "0.11"
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nng = "1.0"
